--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "acorn": "^6.1.1",
+    "aws-sdk": "^2.490.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.2.1",
     "popper.js": "^1.15.0",
